# rsspell

./: .gitignore  Cargo.toml  README.md  book.toml
.github/workflows/: docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  design.md  usage.md
src/: design.md  introduction.md  main.rs  usage.md
