[package]
name = "rsspell"
version = "0.1.1"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Fast and efficient spell checker"
license = "MIT"
repository = "https://github.com/veltzer/rsspell"

[dependencies]
pulldown-cmark = "0.13"
svg = "0.17"
walkdir = "2"
regex = "1"
zspell = "0.5.5"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
anyhow = "1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
